[COLAB-1029] Fixed spacing in members-portlet

--- a/themes/climatecolab-theme/src/main/webapp/css/scss/components/_c-TitleBar.scss
+++ b/themes/climatecolab-theme/src/main/webapp/css/scss/components/_c-TitleBar.scss
@@ -48,7 +48,7 @@ $c-TitleBar__separator__color: #B9E3FF !default;
   //inline icons
   img {
     height: 25px;
-    vertical-align: -8px; //vertical-align: middle;
+    vertical-align: middle;
     margin-right: 5px;
   }
 
